k8s/worldrates-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worldrates-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: worldrates
  template:
    metadata:
      labels:
        component: worldrates
    spec:
      containers:
        - image: ibaranga/worldrates:quarkus
          imagePullPolicy: Always
          name: worldrates
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 4
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 2
            periodSeconds: 10
            failureThreshold: 1
