k8s/worldrates-frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worldrates-frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          imagePullPolicy: Always
          image: ibaranga/worldrates-frontend
          ports:
            - containerPort: 8080
