k8s/worldrates-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: worlrates-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: worldrates
  ports:
    - port: 8080
      targetPort: 8080
